# PromptMS

./: .gitignore  LICENSE  README.md  clean.ps1  clean.sh
backend/: README.md  main.py  pyproject.toml  run.py
backend/app/: models.py
backend/app/api/v1/: ai.py  categories.py  prompts.py
backend/app/core/: config.py
backend/app/crud/: crud_category.py  crud_prompt.py
backend/app/db/: db.py
backend/app/service/: ai.py
database/schema/: seed.sql
frontend/: index.html  package-lock.json  vite.config.js
frontend/public/: adapters.js  background.js  content.js  manifest.js  manifest.json
frontend/src/: SidePanel.vue  main.js
frontend/src/api/: aiService.js  categoryService.js  promptService.js  request.js
frontend/src/components/: Breadcrumb.vue  CategoryEditor.vue  CategoryItem.vue  PromptEditor.vue  PromptItem.vue  SettingsView.vue
frontend/src/config/: domains.js
frontend/src/content/: adapters.js  index.js  injector.js  styles.js  template.js
