[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altgraph==0.17.5",
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.12.0",
    "click==8.3.1",
    "colorama==0.4.6 ; sys_platform == 'win32'",
    "exceptiongroup==1.3.1 ; python_full_version < '3.11'",
    "fastapi==0.128.0",
    "greenlet==3.3.0 ; platform_machine == 'AMD64' or platform_machine == 'WIN32' or platform_machine == 'aarch64' or platform_machine == 'amd64' or platform_machine == 'ppc64le' or platform_machine == 'win32' or platform_machine == 'x86_64'",
    "h11==0.16.0",
    "idna==3.11",
    "macholib==1.16.4 ; sys_platform == 'darwin'",
    "openai>=2.24.0",
    "packaging==25.0",
    "pefile==2024.8.26 ; sys_platform == 'win32'",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pydantic-settings>=2.13.1",
    "pyinstaller==6.17.0",
    "pyinstaller-hooks-contrib==2025.11",
    "pywin32-ctypes==0.2.3 ; sys_platform == 'win32'",
    "setuptools==80.9.0",
    "sqlalchemy==2.0.45",
    "starlette==0.50.0",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "uvicorn==0.40.0",
]
